--- a/assets/filters.css
+++ b/assets/filters.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
+
 h1{
   font-family: "Pacifico", cursive;
   font-weight: 400;
@@ -5,10 +8,20 @@ h1{
   text-align: center;
   color: #5d4037;
 }
+
 body{
     background-color: #FFF5E1;
 }
 
+.bg-custom {
+    background-color: #FFF5E1 !important;
+  }
+
+.navbar-brand{
+
+  color: #5d4037;
+
+}
 .col-md-8{
       background-color: #FFF5E1;
 }
@@ -24,3 +37,12 @@ body{
   text-align: end;
   color: #5d4037;
 }
+
+.footer{
+  text-align: end, center;
+  color: #5d4037;
+}
+
+
+
+
