--- a/assets/filters.css
+++ b/assets/filters.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
 
-h1{
+.titulo{
   font-family: "Pacifico", cursive;
   font-weight: 400;
   font-style: normal;
@@ -9,6 +9,13 @@ h1{
   color: #5d4037;
 }
 
+.Principal{
+  font-family: "Pacifico", cursive;
+  font-weight: 400;
+  font-style: normal;
+  text-align: left;
+  color: #5d4037;
+}
 body{
     background-color: #FFF5E1;
 }
