--- a/assets/filters.css
+++ b/assets/filters.css
@@ -74,3 +74,14 @@ body{
   aspect-ratio:4/3;                  /* o 1/1 si las quieres cuadradas */
   object-fit:cover;
 }
+.precio {
+  color: #5D4037; /* Marrón chocolate */
+  font-size: 1rem;
+  margin-top: 5px;
+}
+
+.precio {
+  color: #5D4037;
+  font-weight: bold;
+  font-size: 1rem;
+}
