--- a/assets/filters.css
+++ b/assets/filters.css
@@ -86,3 +86,11 @@ body{
   font-size: 1rem;
 }
 
+.Registrotitulo{
+  font-family: "Pacifico", cursive;
+  font-weight: 400;
+  font-style: normal;
+  text-align: center;
+  color: #5d4037;
+  padding-top: 20px;
+}
