--- a/assets/filters.css
+++ b/assets/filters.css
@@ -60,7 +60,7 @@ body{
   font-family: 'Lato', sans-serif;
   font-weight: 21%;
   font-style: normal;
-  color: #5d4037;;
+  color: #5d4037;
 }
 
 .cards{
@@ -94,3 +94,4 @@ body{
   color: #5d4037;
   padding-top: 20px;
 }
+
