--- a/assets/filters.css
+++ b/assets/filters.css
@@ -95,3 +95,10 @@ body{
   padding-top: 20px;
 }
 
+.nuestratienda{
+  font-family: "Pacifico", cursive;
+  font-weight: 400;
+  font-style: normal;
+  text-align: left;
+  color: #5d4037;
+}
