--- a/assets/filters.css
+++ b/assets/filters.css
@@ -102,3 +102,11 @@ body{
   text-align: left;
   color: #5d4037;
 }
+
+.pagpago{
+  font-family: "Pacifico", cursive;
+  font-weight: 400;
+  font-style: normal;
+  text-align: center;
+  color: #5d4037;
+}
