--- a/assets/filters.css
+++ b/assets/filters.css
@@ -103,10 +103,11 @@ body{
   color: #5d4037;
 }
 
-.pagpago{
+.Pagos {
   font-family: "Pacifico", cursive;
   font-weight: 400;
   font-style: normal;
   text-align: center;
   color: #5d4037;
 }
+
